// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveMoney Component matches the snapshot 1`] = `
<div
  className="page-content"
>
  <div
    className="d-flex justify-content-between align-items-center"
  >
    <h3>
      Receive Money
    </h3>
  </div>
  <div
    className="content-wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col-md-9"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div
              className="row"
            >
              <i />
              <p>
                To collect an Interac e-Transfers®¹, check your email and en your Interac e-Transfer notice. Select the link included in the body of the text to begin the deposit process.
              </p>
              <br />
              <p>
                Deposits made after 6:00 pm ET will be processed the next business day.
              </p>
            </div>
          </div>
        </div>
        <hr
          style={
            Object {
              "height": "1px",
              "width": "100%",
            }
          }
        />
        <div
          className="col"
          style={
            Object {
              "borderRadius": "4px",
              "display": "flex",
              "justifyContent": "flex-end",
              "marginBottom": "10px",
              "marginTop": "-18px",
              "padding": "6px 0px",
            }
          }
        >
          <button
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "white",
                "border": "2px solid grey",
                "borderRadius": "4px",
                "color": "black",
                "marginRight": "15px",
                "padding": "5px 12px",
              }
            }
            type="button"
          >
            Check Status
          </button>
          <button
            onClick={[Function]}
            style={
              Object {
                "borderRadius": "4px",
                "padding": "5px 12px",
              }
            }
            type="button"
          >
            Learn More
          </button>
        </div>
        <hr
          style={
            Object {
              "height": "1px",
            }
          }
        />
        <div
          className="row"
        >
          <i />
          <h6
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Note:
          </h6>
          <p>
            ¹Your use of lnterac e-Transfer® is subject to the 
          </p>
          <p>
            <i />
            lnterac e-Transferl Terms and conditions (PDF, 197 KB).
          </p>
        </div>
      </div>
      <div
        className="col-md-3"
      >
        <div
          className="row"
          style={
            Object {
              "border": "solid #AAAAAA 1px",
              "justifyItems": "space-between",
              "margin": "0px 0px 20px 0px",
            }
          }
        >
          <h6
            style={
              Object {
                "paddingTop": "10px",
              }
            }
          >
            You can also:
          </h6>
          <a
            href="./"
            style={
              Object {
                "color": "black",
                "padding": "8px 8px",
                "textDecoration": "none",
              }
            }
          >
            View upcoming bill payments and transfers
          </a>
          <a
            href="./"
            style={
              Object {
                "color": "black",
                "padding": "8px 8px",
                "textDecoration": "none",
              }
            }
          >
            Register for lnterac e-Transfer® Autodeposits
          </a>
          <a
            href="./"
            style={
              Object {
                "color": "black",
                "padding": "8px 8px",
                "textDecoration": "none",
              }
            }
          >
            Change your statement preferences
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="footer-content-wrapper"
  >
    <div
      className="quick-links container"
    >
      <div
        className="row"
      >
        <h3
          className="col-sm-12"
        >
          Quick Links
        </h3>
      </div>
      <div
        className="row"
      >
        <div
          className="col-sm-2"
        >
          <ul>
            <li>
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Home
              </a>
            </li>
            <li>
              Please Review Our Legal Stuff by visiting our
               
              <a
                className="text-decoration-none"
                href="/legal"
                onClick={[Function]}
              >
                Privacy Policy | TOU | EULA | CardHolder T&C Pages
              </a>
            </li>
          </ul>
        </div>
        <div
          className="col-sm-2"
        >
          8465 W Sahara Ave. Las Vegas, NEVADA
          <ul>
            <li>
              <a
                href="tel:+17026231876"
              >
                1.702.623.1876
              </a>
            </li>
            <li>
              <a
                href="mailto:contact@zippy.cash"
              >
                contact@zippy.cash
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-md-12 col-sm-12 col-xs-12 text-left"
        >
          © 2021 Zippy Cash LLC  All rights reserved.
          <br />
          <br />
          The Program Manager for the Zippy Cash® Prepaid Visa Debit Card is PayQuicker, LLC
          <br />
          Zippy Cash® is a registered trademark of Zippy Cash, LLC
          <br />
          The Zippy Cash Prepaid Visa Debit Card is issued by Metropolitan Commercial Bank (Member FDIC) pursuant to a license from Visa U.S.A. Inc. “Metropolitan Commercial Bank” and “Metropolitan” are registered trademarks of Metropolitan Commercial Bank ©2014. BY USING THIS CARD YOU AGREE TO THE TERMS AND CONDITIONS OF THE CARDHOLDER AGREEMENT AND FEE SCHEDULE, IF ANY. All trademarks and service marks are the property of their respective owners.
          <br />
          In compliance with the USA PATRIOT Act* and other laws, anyone who is a US resident over 18 with a valid Social Security number and a verifiable physical US address (no PO boxes or APO addresses) can apply for an Zippy Cash Card. This information must be provided, along with other information pertinent to receiving approval, when applying for a Zippy Cash Card. Currently, we do not issue the Zippy Cash Card to residents of Puerto Rico, Guam, the Virgin Islands, American Samoa, or other US territories.
          <br />
          *Important information for opening a card account: To help the federal government fight the funding of terrorism and money laundering activities, the USA PATRIOT Act requires all financial institutions and their third parties to obtain, verify and record information that identifies each person who opens a card account. What this means for you: When you open a card account, we will ask for your name, address, date of birth, social security number or country identification number, and other information that will allows us to identify you. We may also request a copy of your driver’s license or other documentation bearing your photo as verification of your identity.
          <br />
          Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S. and other countries. App Store is a service mark of Apple Inc. Google Play is a trademark of Google Inc. Data rates may apply. Samsung Pay is a trademark of Samsung Inc.
        </div>
      </div>
    </div>
    <footer
      className="container mb-3"
    >
      <div
        className="d-none d-md-block"
      >
        <div
          className="d-flex justify-content-between border-bottom"
        />
        <div
          className="d-flex justify-content-between border-top"
        >
          <div
            className=""
          >
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/personal-profile"
              >
                dev docs
              </a>
            </div>
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Lore
              </a>
            </div>
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Ipsum
              </a>
            </div>
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Nullam Atoidio
              </a>
            </div>
          </div>
          <div
            className="copyright mt-1"
          >
            <span>
              © 2021 Lorem ipsum dolor sit amet, consectetuer
            </span>
          </div>
        </div>
      </div>
      <div
        className="d-block d-md-none"
      >
        <div
          className="d-flex border-bottom"
        >
          <div
            className="d-flex flex-column me-2"
          >
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/personal-profile"
              >
                dev docs
              </a>
            </div>
            <div
              className="footer-link mb-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Lore
              </a>
            </div>
            <div
              className="footer-link mb-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Ipsum
              </a>
            </div>
            <div
              className="footer-link mb-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Nullam Atoidio
              </a>
            </div>
          </div>
        </div>
        <div
          className="d-flex justify-content-end border-top"
        >
          <div
            className="copyright mt-2 text-end small"
          >
            <span>
              © 2021 Lorem ipsum dolor sit amet, consectetuer
            </span>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`ReceiveMoney Component should render ReceiveMoney 1`] = `
<div>
  <div
    class="page-content"
  >
    <div
      class="d-flex justify-content-between align-items-center"
    >
      <h3>
        Receive Money
      </h3>
    </div>
    <div
      class="content-wrapper"
    >
      <div
        class="row"
      >
        <div
          class="col-md-9"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class="row"
              >
                <i />
                <p>
                  To collect an Interac e-Transfers®¹, check your email and en your Interac e-Transfer notice. Select the link included in the body of the text to begin the deposit process.
                </p>
                <br />
                <p>
                  Deposits made after 6:00 pm ET will be processed the next business day.
                </p>
              </div>
            </div>
          </div>
          <hr
            style="height: 1px; width: 100%;"
          />
          <div
            class="col"
            style="display: flex; justify-content: flex-end; margin-bottom: 10px; margin-top: -18px; border-radius: 4px; padding: 6px 0px;"
          >
            <button
              style="margin-right: 15px; border: 2px solid grey; border-radius: 4px; background-color: white; color: black; padding: 5px 12px;"
              type="button"
            >
              Check Status
            </button>
            <button
              style="border-radius: 4px; padding: 5px 12px;"
              type="button"
            >
              Learn More
            </button>
          </div>
          <hr
            style="height: 1px;"
          />
          <div
            class="row"
          >
            <i />
            <h6
              style="font-weight: bold;"
            >
              Note:
            </h6>
            <p>
              ¹Your use of lnterac e-Transfer® is subject to the 
            </p>
            <p>
              <i />
              lnterac e-Transferl Terms and conditions (PDF, 197 KB).
            </p>
          </div>
        </div>
        <div
          class="col-md-3"
        >
          <div
            class="row"
            style="border: 1px solid #aaaaaa; justify-items: space-between; margin: 0px 0px 20px 0px;"
          >
            <h6
              style="padding-top: 10px;"
            >
              You can also:
            </h6>
            <a
              href="./"
              style="text-decoration: none; padding: 8px 8px; color: black;"
            >
              View upcoming bill payments and transfers
            </a>
            <a
              href="./"
              style="text-decoration: none; padding: 8px 8px; color: black;"
            >
              Register for lnterac e-Transfer® Autodeposits
            </a>
            <a
              href="./"
              style="text-decoration: none; padding: 8px 8px; color: black;"
            >
              Change your statement preferences
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer-content-wrapper"
    >
      <div
        class="quick-links container"
      >
        <div
          class="row"
        >
          <h3
            class="col-sm-12"
          >
            Quick Links
          </h3>
        </div>
        <div
          class="row"
        >
          <div
            class="col-sm-2"
          >
            <ul>
              <li>
                <a
                  class="text-decoration-none"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li>
                Please Review Our Legal Stuff by visiting our
                 
                <a
                  class="text-decoration-none"
                  href="/legal"
                >
                  Privacy Policy | TOU | EULA | CardHolder T&C Pages
                </a>
              </li>
            </ul>
          </div>
          <div
            class="col-sm-2"
          >
            8465 W Sahara Ave. Las Vegas, NEVADA
            <ul>
              <li>
                <a
                  href="tel:+17026231876"
                >
                  1.702.623.1876
                </a>
              </li>
              <li>
                <a
                  href="mailto:contact@zippy.cash"
                >
                  contact@zippy.cash
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-md-12 col-sm-12 col-xs-12 text-left"
          >
            © 2021 Zippy Cash LLC  All rights reserved.
            <br />
            <br />
            The Program Manager for the Zippy Cash® Prepaid Visa Debit Card is PayQuicker, LLC
            <br />
            Zippy Cash® is a registered trademark of Zippy Cash, LLC
            <br />
            The Zippy Cash Prepaid Visa Debit Card is issued by Metropolitan Commercial Bank (Member FDIC) pursuant to a license from Visa U.S.A. Inc. “Metropolitan Commercial Bank” and “Metropolitan” are registered trademarks of Metropolitan Commercial Bank ©2014. BY USING THIS CARD YOU AGREE TO THE TERMS AND CONDITIONS OF THE CARDHOLDER AGREEMENT AND FEE SCHEDULE, IF ANY. All trademarks and service marks are the property of their respective owners.
            <br />
            In compliance with the USA PATRIOT Act* and other laws, anyone who is a US resident over 18 with a valid Social Security number and a verifiable physical US address (no PO boxes or APO addresses) can apply for an Zippy Cash Card. This information must be provided, along with other information pertinent to receiving approval, when applying for a Zippy Cash Card. Currently, we do not issue the Zippy Cash Card to residents of Puerto Rico, Guam, the Virgin Islands, American Samoa, or other US territories.
            <br />
            *Important information for opening a card account: To help the federal government fight the funding of terrorism and money laundering activities, the USA PATRIOT Act requires all financial institutions and their third parties to obtain, verify and record information that identifies each person who opens a card account. What this means for you: When you open a card account, we will ask for your name, address, date of birth, social security number or country identification number, and other information that will allows us to identify you. We may also request a copy of your driver’s license or other documentation bearing your photo as verification of your identity.
            <br />
            Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S. and other countries. App Store is a service mark of Apple Inc. Google Play is a trademark of Google Inc. Data rates may apply. Samsung Pay is a trademark of Samsung Inc.
          </div>
        </div>
      </div>
      <footer
        class="container mb-3"
      >
        <div
          class="d-none d-md-block"
        >
          <div
            class="d-flex justify-content-between border-bottom"
          />
          <div
            class="d-flex justify-content-between border-top"
          >
            <div
              class=""
            >
              <div
                class="footer-link mt-1"
              >
                <a
                  class="text-decoration-none"
                  href="/personal-profile"
                >
                  dev docs
                </a>
              </div>
              <div
                class="footer-link mt-1"
              >
                <a
                  class="text-decoration-none"
                  href="/"
                >
                  Lore
                </a>
              </div>
              <div
                class="footer-link mt-1"
              >
                <a
                  class="text-decoration-none"
                  href="/"
                >
                  Ipsum
                </a>
              </div>
              <div
                class="footer-link mt-1"
              >
                <a
                  class="text-decoration-none"
                  href="/"
                >
                  Nullam Atoidio
                </a>
              </div>
            </div>
            <div
              class="copyright mt-1"
            >
              <span>
                © 2021 Lorem ipsum dolor sit amet, consectetuer
              </span>
            </div>
          </div>
        </div>
        <div
          class="d-block d-md-none"
        >
          <div
            class="d-flex border-bottom"
          >
            <div
              class="d-flex flex-column me-2"
            >
              <div
                class="footer-link mt-1"
              >
                <a
                  class="text-decoration-none"
                  href="/personal-profile"
                >
                  dev docs
                </a>
              </div>
              <div
                class="footer-link mb-1"
              >
                <a
                  class="text-decoration-none"
                  href="/"
                >
                  Lore
                </a>
              </div>
              <div
                class="footer-link mb-1"
              >
                <a
                  class="text-decoration-none"
                  href="/"
                >
                  Ipsum
                </a>
              </div>
              <div
                class="footer-link mb-1"
              >
                <a
                  class="text-decoration-none"
                  href="/"
                >
                  Nullam Atoidio
                </a>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-end border-top"
          >
            <div
              class="copyright mt-2 text-end small"
            >
              <span>
                © 2021 Lorem ipsum dolor sit amet, consectetuer
              </span>
            </div>
          </div>
        </div>
      </footer>
    </div>
  </div>
</div>
`;
